[gd_scene load_steps=2 format=3 uid="uid://blo402ndjq53o"]

[ext_resource type="Script" uid="uid://dkqd6jibg30gg" path="res://arena_result.gd" id="1_7tdtj"]

[node name="ArenaResult" type="Node2D"]
script = ExtResource("1_7tdtj")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -250.0
offset_right = 250.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.73383
offset_top = -107.25
offset_right = 240.73383
offset_bottom = 107.25
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Проиграл лох"

[node name="StatsContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="TimeLabel" type="Label" parent="Panel/VBoxContainer/StatsContainer"]
layout_mode = 2
text = "время"

[node name="WavesLabel" type="Label" parent="Panel/VBoxContainer/StatsContainer"]
layout_mode = 2
text = "волна"

[node name="RewardLabel" type="Label" parent="Panel/VBoxContainer/StatsContainer"]
layout_mode = 2
text = "награда"

[node name="Buttons" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="ContinueButton" type="Button" parent="Panel/VBoxContainer/Buttons"]
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
text = "продолжить"

[node name="RetryButton" type="Button" parent="Panel/VBoxContainer/Buttons"]
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
text = "заново"
