extends Node2D

@onready var title_label: Label = $Panel/VBoxContainer/TitleLabel
@onready var time_label: Label = $Panel/VBoxContainer/StatsContainer/TimeLabel
@onready var waves_label: Label = $Panel/VBoxContainer/StatsContainer/WavesLabel
@onready var reward_label: Label = $Panel/VBoxContainer/StatsContainer/RewardLabel
@onready var continue_button: Button = $Panel/VBoxContainer/Buttons/ContinueButton
@onready var retry_button: Button = $Panel/VBoxContainer/Buttons/RetryButton

var survival_time: float = 0.0
var waves_completed: int = 0
var is_victory: bool = false

func _ready():
	print("üéØ ArenaResult (Node2D): –ó–∞–≥—Ä—É–∂–µ–Ω –∏ –≥–æ—Ç–æ–≤!")
	
	# –°—Ä–∞–∑—É –ø–æ–∫–∞–∑—ã–≤–∞–µ–º
	self.visible = true
	self.z_index = 1000
	
	# –ü–æ–¥–∫–ª—é—á–∞–µ–º –∫–Ω–æ–ø–∫–∏
	continue_button.pressed.connect(_on_continue_pressed)
	retry_button.pressed.connect(_on_retry_pressed)
	
	print("üéØ ArenaResult: –ö–Ω–æ–ø–∫–∏ –ø–æ–¥–∫–ª—é—á–µ–Ω—ã")

func position_at_camera(camera_position: Vector2):
	"""–ü–æ–∑–∏—Ü–∏–æ–Ω–∏—Ä–æ–≤–∞–Ω–∏–µ –æ–∫–Ω–∞ –∫–∞–∫ —É –æ–∫–Ω–∞ —Ç–æ—Ä–≥–æ–≤–ª–∏"""
	print("üéØ –ü–æ–∑–∏—Ü–∏–æ–Ω–∏—Ä—É—é –æ–∫–Ω–æ —Ä–µ–∑—É–ª—å—Ç–∞—Ç–æ–≤...")
	
	# –†–∞–∑–º–µ—Ä –æ–∫–Ω–∞ (–æ—Ä–∏–≥–∏–Ω–∞–ª—å–Ω—ã–π)
	var original_window_size = Vector2(650, 450)
	
	# –ú–∞—Å—à—Ç–∞–±
	var scale_ratio = 0.53
	self.scale = Vector2(scale_ratio, scale_ratio)
	
	# –†–∞–∑–º–µ—Ä –ø–æ—Å–ª–µ –º–∞—Å—à—Ç–∞–±–∏—Ä–æ–≤–∞–Ω–∏—è
	var scaled_window_size = original_window_size * scale_ratio
	
	# –ü–æ–∑–∏—Ü–∏–æ–Ω–∏—Ä—É–µ–º –ø–æ —Ü–µ–Ω—Ç—Ä—É –∫–∞–º–µ—Ä—ã
	self.global_position = camera_position - (scaled_window_size / 2) - Vector2(0, 180)
	
	print("üéØ –û–∫–Ω–æ –ø–æ–∑–∏—Ü–∏–æ–Ω–∏—Ä–æ–≤–∞–Ω–æ!")
	print("  –ü–æ–∑–∏—Ü–∏—è:", self.global_position)

func display_results(time: float, waves: int, victory: bool = false, camera_position: Vector2 = Vector2.ZERO):
	print("üéØ ArenaResult.display_results –í–´–ó–í–ê–ù!")
	print("üéØ –î–∞–Ω–Ω—ã–µ: –≤—Ä–µ–º—è=", time, " –≤–æ–ª–Ω—ã=", waves, " –ø–æ–±–µ–¥–∞=", victory)
	
	survival_time = time
	waves_completed = waves
	is_victory = victory
	
	# –ï—Å–ª–∏ –ø–µ—Ä–µ–¥–∞–Ω–∞ –ø–æ–∑–∏—Ü–∏—è –∫–∞–º–µ—Ä—ã - –ø–æ–∑–∏—Ü–∏–æ–Ω–∏—Ä—É–µ–º
	if camera_position != Vector2.ZERO:
		position_at_camera(camera_position)
	
	# –û–±–Ω–æ–≤–ª—è–µ–º UI
	_update_ui()
	
	# –î–∞–µ–º –Ω–∞–≥—Ä–∞–¥—É
	_give_rewards()
	
	# –ì–∞—Ä–∞–Ω—Ç–∏—Ä—É–µ–º —á—Ç–æ –æ–∫–Ω–æ –≤–∏–¥–Ω–æ
	self.visible = true
	self.modulate = Color(1, 1, 1, 1)
	
	# –§–æ–∫—É—Å –Ω–∞ –∫–Ω–æ–ø–∫–µ
	continue_button.grab_focus()
	
	print("üéØ –û–∫–Ω–æ —Ä–µ–∑—É–ª—å—Ç–∞—Ç–æ–≤ –ü–û–ö–ê–ó–ê–ù–û!")

func _update_ui():
	# –í—Ä–µ–º—è
	var minutes = int(survival_time) / 60
	var seconds = int(survival_time) % 60
	time_label.text = "–í—Ä–µ–º—è: %02d:%02d" % [minutes, seconds]
	
	# –í–æ–ª–Ω—ã
	waves_label.text = "–í–æ–ª–Ω: " + str(waves_completed)
	
	# –ù–∞–≥—Ä–∞–¥–∞
	var reward = waves_completed * 50
	if is_victory:
		reward += 200
		title_label.text = "–ü–û–ë–ï–î–ê!"
		title_label.modulate = Color.GREEN
		retry_button.visible = false
		reward_label.text = "–ù–∞–≥—Ä–∞–¥–∞: " + str(reward) + " Trash + –ö—Ä–∏—Å—Ç–∞–ª–ª!"
	else:
		title_label.text = "–ü–û–†–ê–ñ–ï–ù–ò–ï"
		title_label.modulate = Color.RED
		retry_button.visible = true
		reward_label.text = "–ù–∞–≥—Ä–∞–¥–∞: " + str(reward) + " Trash"
	
	print("üéØ UI –æ–±–Ω–æ–≤–ª–µ–Ω")

func _give_rewards():
	# –î–∞–µ–º –Ω–∞–≥—Ä–∞–¥—É –∏–≥—Ä–æ–∫—É
	var player = get_tree().get_first_node_in_group("players")
	if player:
		var reward = waves_completed * 50
		if is_victory:
			reward += 200
		
		print("üéØ –î–∞—é –Ω–∞–≥—Ä–∞–¥—É –∏–≥—Ä–æ–∫—É:", reward, " Trash")
		player.currency += reward
		if player.has_signal("currency_changed"):
			player.emit_signal("currency_changed", player.currency)
		
		if is_victory:
			var PlayerInventory = get_node_or_null("/root/PlayerInventory")
			if PlayerInventory:
				PlayerInventory.add_item("Crystal", 1)
				print("üéØ –ö—Ä–∏—Å—Ç–∞–ª–ª –¥–æ–±–∞–≤–ª–µ–Ω")
	else:
		print("üéØ –ò–≥—Ä–æ–∫ –Ω–µ –Ω–∞–π–¥–µ–Ω –¥–ª—è –≤—ã–¥–∞—á–∏ –Ω–∞–≥—Ä–∞–¥—ã")

func _on_continue_pressed():
	print("üéØ –ù–∞–∂–∞—Ç–∞ '–ü—Ä–æ–¥–æ–ª–∂–∏—Ç—å' - –≤ –ª–∞–≥–µ—Ä—å")
	
	# –í–û–°–°–¢–ê–ù–ê–í–õ–ò–í–ê–ï–ú –ó–î–û–†–û–í–¨–ï –ò–ì–†–û–ö–ê
	_restore_player_health()
	
	get_tree().change_scene_to_file("res://scenes/world/labaratory/lab_scene.tscn")

func _on_retry_pressed():
	print("üéØ –ù–∞–∂–∞—Ç–∞ '–ü–æ–≤—Ç–æ—Ä–∏—Ç—å' - –ø–µ—Ä–µ–∑–∞–ø—É—Å–∫ –∞—Ä–µ–Ω—ã")
	
	# –í–û–°–°–¢–ê–ù–ê–í–õ–ò–í–ê–ï–ú –ó–î–û–†–û–í–¨–ï –ò–ì–†–û–ö–ê
	_restore_player_health()
	
	get_tree().reload_current_scene()

func _restore_player_health():
	"""–í–æ—Å—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ—Ç –∑–¥–æ—Ä–æ–≤—å–µ –∏–≥—Ä–æ–∫–∞ –¥–æ –º–∞–∫—Å–∏–º–∞–ª—å–Ω–æ–≥–æ"""
	var player = get_tree().get_first_node_in_group("players")
	if player:
		# –í–æ—Å—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ–º –∑–¥–æ—Ä–æ–≤—å–µ
		if player.has_method("heal_to_full"):
			player.heal_to_full()
			print("‚ù§Ô∏è –ó–¥–æ—Ä–æ–≤—å–µ –∏–≥—Ä–æ–∫–∞ –≤–æ—Å—Å—Ç–∞–Ω–æ–≤–ª–µ–Ω–æ –¥–æ –º–∞–∫—Å–∏–º—É–º–∞!")
		
		# –í–û–°–°–¢–ê–ù–ê–í–õ–ò–í–ê–ï–ú –°–´–†!
		if player.has_method("restore_all_cheese_to_full"):
			player.restore_all_cheese_to_full()
			print("üßÄ –°—ã—Ä –∏–≥—Ä–æ–∫–∞ –≤–æ—Å—Å—Ç–∞–Ω–æ–≤–ª–µ–Ω –¥–æ –ø–æ–ª–Ω–æ–≥–æ!")
